tests/idris2/error/error035/Issue3739.idr
foo : Nat -> Nat
foo = `minus` 5
